--- a/page1.html
+++ b/page1.html
@@ -58,14 +58,14 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="https://mobirise.com"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="https://moma666.github.io/Mensch-Computer-Prototyp"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>
                     
-                    Englisch</a></div>
+                    Deutsch</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-section info3 cid-rNrKfCb9AE mbr-parallax-background" id="info3-7">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section info3 cid-rNrKfCb9AE mbr-parallax-background" id="info3-7">
 
     
 
