--- a/page4.html
+++ b/page4.html
@@ -58,14 +58,14 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="https://mobirise.com"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="https://moma666.github.io/Mensch-Computer-Prototyp"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>
                     
-                    Englisch</a></div>
+                    Deutsch</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-gallery gallery5 cid-rNsKmT2akD" id="gallery5-c">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-gallery gallery5 cid-rNsKmT2akD" id="gallery5-c">
 
     
 
