--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="index.html#header2-1"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>News&nbsp;</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Times</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com">Schließzeiten</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Our institution</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Fee</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Form</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html#pricing-tables3-8" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-clock mbr-iconfont mbr-iconfont-btn"></span>Times</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page1.html">Bürozeiten<br></a><a class="dropdown-item text-primary display-4" href="page1.html#pricing-tables3-8">Betreuungszeiten</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com">Schließzeiten</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Our institution</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Beschreibung der Einrichtung und Lage</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Pädagogische Konzeption</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Verpflegung</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Kapazität</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Bilingualität</a><a class="dropdown-item text-primary display-4" href="https://mobirise.com" aria-expanded="false">Arbeiten bei uns</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#pricing-tables1-6" aria-expanded="false"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Fee</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Form</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">
                         </a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -100,26 +100,23 @@
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-4">
                 <div class="plan-header text-center pt-5">
                     <h3 class="plan-title mbr-fonts-style display-5">
-                        Vormittag</h3>
+                        Morning</h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5">
                             $
                         </span>
                         <span class="price-figure mbr-fonts-style display-1">60</span>
                         <small class="price-term mbr-fonts-style display-7">
-                            pro Monat
-                        </small>
+                            per month</small>
                     </div>
                 </div>
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item"><span style="font-size: 1.2rem;">+ Frühstück<br></span>+ Betreuung<br>+ Bastelgeld</li>
+                            <li class="list-group-item"><span style="font-size: 1.2rem;">+ breakfast<br></span>+ child care<br>+ tinkering money</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Application form</a></div>
                 </div>
             </div>
 
@@ -133,18 +130,16 @@
                         </span>
                         <span class="price-figure mbr-fonts-style display-1">125</span>
                         <small class="price-term mbr-fonts-style display-7">
-                            pro Monat</small>
+                            per month</small>
                     </div>
                 </div>
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">+ Frühstück<br>+ Mittagessen<br>+ Snacks<br>+ Betreuung<br>+ Bastelgeld</li>
+                            <li class="list-group-item">+ breakfast<br>+ lunch<br>+ snacks<br>+ chilf care<br>+ tinkering money</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Application form</a></div>
                 </div>
             </div>
 
@@ -158,18 +153,16 @@
                         </span>
                         <span class="price-figure mbr-fonts-style display-1">20</span>
                         <small class="price-term mbr-fonts-style display-7">
-                            pro Monat</small>
+                            per month</small>
                     </div>
                 </div>
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">+ Snack<br>+ Betreuung</li>
+                            <li class="list-group-item">+ snack<br>+ child care</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">JETZT KAUFEN</a>
-                    </div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.co" class="btn btn-primary display-4">Application form</a></div>
                 </div>
             </div>
 
