--- a/page1.html
+++ b/page1.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section info3 cid-rNrKfCb9AE mbr-parallax-background" id="info3-7">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section info3 cid-rNrKfCb9AE mbr-parallax-background" id="info3-7">
 
     
 
